test/error/OpEqualStringStgNull.fu
public static class Test
{
	public static bool Run()
	{
		string() s = "foo";
		return s == null; //ERROR: Cannot compare 'string()' with 'null'
	}
}
